objects/vlocity_cmt__OrchestrationItemSource__c.object
<CustomObject>
    <description>Link each Orchestration Item with its source Order Item(s) or Fulfilment Request Line(s) following Orchestration Plans creation.</description>
    <fields>
        <fullName>vlocity_cmt__OrchestrationItemId__c</fullName>
        <description>OrchestrationItem Id</description>
        <inlineHelpText>OrchestrationItem Id</inlineHelpText>
        <label>Orchestration Item Source Line Items</label>
        <referenceTo>vlocity_cmt__OrchestrationItem__c</referenceTo>
        <relationshipLabel>Orchestration Item Source Line Items</relationshipLabel>
        <relationshipName>SourceLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SourceFulfilmentRequestLineId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Source FulfilmentRequestLine Id</description>
        <inlineHelpText>Source FulfilmentRequest Line Id</inlineHelpText>
        <label>Source Fulfilment Request Line</label>
        <referenceTo>vlocity_cmt__FulfilmentRequestLine__c</referenceTo>
        <relationshipLabel>Orchestration Items</relationshipLabel>
        <relationshipName>OrchestrationItemAssociations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SourceOrderItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Source OrderItem Id</description>
        <inlineHelpText>Source OrderItem Id</inlineHelpText>
        <label>Source Order Item</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Orchestration Items</relationshipLabel>
        <relationshipName>OrchestrationItemAssociations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Orchestration Item Source</label>
    <nameField>
        <label>Orchestration Item Source</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orchestration Item Sources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>